Made authorization optional and extended documentation of the EDC example